fix: align + icon in center

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -26,6 +26,7 @@
 .acf-svg-icon-picker__icon {
   padding: 15px;
   width: 100%;
+  text-align: center;
 }
 
 .acf-svg-icon-picker__icon img {
